<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_horizontal"
    android:paddingTop="@dimen/margin_vertical"
    android:paddingRight="@dimen/margin_horizontal"
    android:paddingBottom="@dimen/margin_vertical"
    tools:context=".CrapsActivity">

    <TextView
        android:id="@+id/puntoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ImageView
        android:id="@+id/dado1ImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_dado1"
        app:srcCompat="@drawable/cara1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ImageView
        android:id="@+id/dado2ImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_dado2"
        app:srcCompat="@drawable/cara6" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/lanzarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/boton_lazar" />
</LinearLayout>